# flexy

./: .gitignore  CHANGELOG.md  README.md  flexy.cabal  justfile
examples/: FlexySDL3.hs  cabal.project
examples/cbits/: flexy_sdl3_shim.c
examples/sdl3/: flexy-sdl3-example.cabal
examples/sdl3/app/: Main.hs
lib/: Flexy.hs
lib/Flexy/: Config.hs  Core.hs  Layout.hs  Measure.hs  Node.hs  Style.hs  Types.hs
lib/Flexy/Internal/: Compute.hs  Layout.hs
lib/Flexy/Layout/: Types.hs
test/: Examples.hs  Golden.hs  Main.hs  Properties.hs
test/fixtures/: absolute_auto_size_measure.golden  absolute_min_max_clamp.golden  absolute_positioned_child.golden  absolute_right_bottom.golden  absolute_static_position.golden  align_content_single_line_ignored.golden  align_content_space_around.golden  align_content_space_between.golden  align_content_space_evenly.golden  align_content_stretch_multiline.golden  align_items_center.golden  align_self_end.golden  aspect_ratio_auto.golden  aspect_ratio_from_height.golden  auto_margin_cross_axis.golden  auto_margin_main_axis.golden  baseline_alignment.golden  baseline_non_baseline_tall.golden  basic_row_flex_grow.golden  border_start_end_rtl.golden  box_sizing_border_box.golden  box_sizing_content_box.golden  column_justify_center.golden  container_max_content_width.golden  container_min_content_width.golden  direction_inheritance_rtl.golden  display_none_ignored.golden  explicit_zero_border_override.golden  explicit_zero_cross_size_no_stretch.golden  fit_content_container_clamp.golden  flex_basis_auto_content.golden  flex_basis_percent.golden  flex_item_padding_includes_outer.golden  flex_shrink.golden  gap_column_with_column.golden  gap_row_column.golden  intrinsic_cross_no_stretch.golden  intrinsic_min_max_content.golden  justify_space_evenly.golden  measure_callback.golden  (+17 more)
