cabal-version:      3.14
name:               flexy
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Flexy
        Flexy.Config
        Flexy.Layout
        Flexy.Measure
        Flexy.Node
        Flexy.Style
        Flexy.Types
    other-modules:
        Flexy.Internal.Compute
        Flexy.Layout.Types
    build-depends:
        base ^>=4.21.0.0
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite flexy-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Golden
        Properties
    build-depends:
        base ^>=4.21.0.0
        , flexy
        , tasty ^>=1.5
        , tasty-golden ^>=2.3
        , tasty-quickcheck ^>=0.10
        , QuickCheck ^>=2.15
        , bytestring ^>=0.12
        , filepath ^>=1.5
    default-language: GHC2024
