cabal-version:      3.14
name:               flexy
version:            0.1.0.0
synopsis:           Small, composable flexbox layouts in pure Haskell
description:
    Flexy turns immutable, application-defined trees into flexbox layouts.
    Styles compose as values and the focused layout kernel has no dependencies
    beyond base.
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
-- extra-source-files:

source-repository head
    type:             git
    location:         https://github.com/mewhhaha/flexy.git

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    exposed-modules:
        Flexy
    other-modules:
        Flexy.Core
        Flexy.Internal.Layout
    build-depends:
        base ^>=4.22.0.0
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite flexy-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Examples
        Properties
    build-depends:
        base ^>=4.22.0.0
        , flexy
        , tasty ^>=1.5
        , tasty-quickcheck ^>=0.10
        , QuickCheck ^>=2.15
    default-language: GHC2024
