cabal-version:      3.14
name:               flexy-sdl3-example
version:            0.1.0.0
build-type:         Simple

executable flexy-sdl3-example
    main-is:          Main.hs
    hs-source-dirs:   app
    c-sources:        cbits/flexy_sdl3_shim.c
    build-depends:
        base ^>=4.22.0.0
        , flexy
    pkgconfig-depends: sdl3
    ghc-options:      -Wall
    default-language: GHC2024
